tests/tests/snapshots/test__go__go-export-serde-phases.snap
---
source: tests/tests/go.rs
expression: "Go::default().export(&types(), specta_serde::PhasesFormat).unwrap()"
---
// Code generated by Specta. DO NOT EDIT.

package bindings

import "math/big"

// ApiResponse — A generic API response.
type ApiResponse[T any] struct {
	// UserID — Stable resource identifier.
	UserID  uint64           `json:"user_id"`
	Payload T                `json:"payload"`
	NextURL *string          `json:"next_url"`
	Values  map[string]int32 `json:"values"`
	Huge    *big.Int         `json:"huge"`
}

type EscapedNames struct {
	Field1 string `json:"content/type"`
	// Deprecated: use value instead
	LegacyName string `json:"legacy_name"`
}

type Event any

type Flattened struct {
	Ok        bool   `json:"ok"`
	RequestID string `json:"request_id"`
}

type HasId struct {
	ID ID `json:"id"`
}

type ID string

// JobStatus — Current processing state.
type JobStatus string

const (
	JobStatusQueued JobStatus = "queued"
	JobStatusValue2 JobStatus = "needs/review"
)

type Metadata struct {
	RequestID string `json:"request_id"`
}

type Node struct {
	Value  string    `json:"value"`
	Child  *Node     `json:"child"`
	Status JobStatus `json:"status"`
	Event  Event     `json:"event"`
}

type PrimitiveCoverage struct {
	I8Value     int8     `json:"i8_value"`
	I16Value    int16    `json:"i16_value"`
	I32Value    int32    `json:"i32_value"`
	I64Value    int64    `json:"i64_value"`
	I128Value   *big.Int `json:"i128_value"`
	IsizeValue  int64    `json:"isize_value"`
	U8Value     uint8    `json:"u8_value"`
	U16Value    uint16   `json:"u16_value"`
	U32Value    uint32   `json:"u32_value"`
	U64Value    uint64   `json:"u64_value"`
	U128Value   *big.Int `json:"u128_value"`
	UsizeValue  uint64   `json:"usize_value"`
	F32Value    float32  `json:"f32_value"`
	F64Value    float64  `json:"f64_value"`
	BoolValue   bool     `json:"bool_value"`
	CharValue   string   `json:"char_value"`
	StringValue string   `json:"string_value"`
	Tuple       [2]any   `json:"tuple"`
}

type TupleStruct [2]any

type UnicodeNames struct {
	Å   string `json:"å"`
	Bbb string `json:"bbb"`
}

type UnitStruct any
